--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 xp-maven-plugin (3.1.2)
 
   * change default unittest ini files location to 'src/test/ini'
+  * add ${project.classifier} property to specify project classifier
 
  -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 07 Aug 2012
 
