--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,21 @@
-xp-maven-plugin (3.1.2)
+xp-maven-plugin (3.1.4)
 
-  * change default unittest ini files location to 'src/test/ini'
-  * add ${project.classifier} property to specify project classifier
+  * Fix the "test-package" goal
+
+ -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 20 Sep 2012
+
+xp-maven-plugin (3.1.3)
+
   * change artifact id from 'net.xp-framework:language' to 'net.xp-framework:compiler'
 
  -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012
 
+xp-maven-plugin (3.1.2)
+
+  * change default unittest ini files location to 'src/test/ini'
+  * add ${project.classifier} property to specify project classifier
+
+ -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012
 
 xp-maven-plugin (3.1.1)
 
