--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
 xp-maven-plugin (3.1.6)
 
   * Moved all operation from phase "validate" to phase "initialize"
-  * Add ${xp.strippedVersion} to project properties
+  * Use new XP-Runners
+  * Update project name to "XP-Framework Maven plugin"
 
- -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 27 Sep 2012
+ -- Marius Rosoiu <marius.rosoiu@1and1.ro> Mon, 1 Oct 2012
 
 xp-maven-plugin (3.1.5)
 
