--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 xp-maven-plugin (3.2.0)
 
+  * Add "xp:apidoc" goal to generate and pack project API documentation
   * Add "xp:ignite" goal to setup local workspace
   * Add "xp:source" goal to pack project sources
   * Unify forked/non-forked custom goals (xp:run/xp:run-no-fork and xp:source and xp:source-no-fork)
