--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Version 3.2.3, released ????-??-??
 ----------------------------------
-
+- Don't set USE_XP env variable when this.use_xp == null
+  (mrosoiu)
 
 Version 3.2.2, released 2012-12-04
 ----------------------------------
