--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 3.2.5, released ????-??-??
+----------------------------------
+- Add "target/xsl" directory to classpath when running tests; if exists
+  (mrosoiu)
+
+
 Version 3.2.4, released 2012-12-07
 ----------------------------------
 - Fix xar artifact description: it does not include dependencies
