--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
-Version 3.3.1, released ????-??-??
+Version 3.3.2, released ????-??-??
 ----------------------------------
+
+
+
+Version 3.3.1, released 2013-05-02
+----------------------------------
+- Fix open files leak - see issue #12
+  (mrosoiu, kiesel)
 
 
 Version 3.3.0, released 2013-04-30
