--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 3.3.4, released 2013-10-09
+----------------------------------
+- Fix target directory of the "ignite" goal when unpacking artifacts
+  (mrosoiu)
+
+
 Version 3.3.3, released 2013-10-09
 ----------------------------------
 - Extend the "ignite" goal with configurable filter and merge functionalities
