- build for java 1.7

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Version 3.4.0, released ????-??-??
 ----------------------------------
 - Add support for XP-6 series
   (kiesel)
+- Updated bundled XP runners to support XP-6
+  (kiesel)
 
 
 
